--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ or other sources. The system will utilize deep learning techniques to achieve ro
             <br />
             <div class="vertical-title">
               <b style="font-size: 22px">Studentportfolio</b> &nbsp; (April 2023) &nbsp;
-              <a href="https://vishnustudentfolio.netlify.app/" target="_blank"><button style="border-radius: 3px;">Website</button></a>
+              <a href="https://personalportfolioasrith.netlify.app/" target="_blank"><button style="border-radius: 3px;">Website</button></a>
               <button style="border-radius: 3px;">GitHub</button>
               <br />
               Portfolio Website&nbsp;&nbsp;
