--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ or other sources. The system will utilize deep learning techniques to achieve ro
             <div class="vertical-title">
               <b style="font-size: 22px">Studentportfolio</b> &nbsp; (April 2023) &nbsp;
               <a href="https://personalportfolioasrith.netlify.app/" target="_blank"><button style="border-radius: 3px;">Website</button></a>
-              <button style="border-radius: 3px;">GitHub</button>
+              <a href="https://github.com/gangamasrith/personal-portfolio.git" target="_blank"><button style="border-radius: 3px;">GitHub</button></a>
               <br />
               Portfolio Website&nbsp;&nbsp;
             </div>
