--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ or other sources. The system will utilize deep learning techniques to achieve ro
                       <input style="border-radius: 6px;" type="text" id="name" name="name" required>
                   
                       <label for="email">Email:</label>
-                      <input style="border-radius: 6px;" type="email" id="email" name="email" required>
+                      <input style="border-radius: 6px;" type="email" id="email" name="email" placeholder="demo@mail.com" required>
                   
                       <label for="message">Message:</label>
                       <textarea style="border-radius: 4px;" id="message" name="message" rows="4" required></textarea> 
