--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ or other sources. The system will utilize deep learning techniques to achieve ro
                 <br>
                 <div class="container">
                   <section class="skills-section">
-                    <form style="margin-bottom: 20px;" id="contactForm" action="https://formspree.io/f/xeqbqgpn"
+                    <form style="margin-bottom: 20px;" id="contactForm" action="https://formspree.io/f/mleygrjy"
                     method="POST">
                       <label for="name">Name:</label>
                       <input style="border-radius: 6px;" type="text" id="name" name="name" required>
